--- a/2.4 Keyed DI Services.ipynb
+++ b/2.4 Keyed DI Services.ipynb
@@ -17,6 +17,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -47,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -71,7 +77,21 @@
       "info: Microsoft.Hosting.Lifetime[0]\n",
       "      Hosting environment: Local\n",
       "info: Microsoft.Hosting.Lifetime[0]\n",
-      "      Content root path: c:\\Users\\DanielM\\Documents\\ISKA\\Dotnet 8\n"
+      "      Content root path: c:\\Users\\DanielM\\Documents\\ISKA\\Dotnet 8\n",
+      "info: Microsoft.AspNetCore.Hosting.Diagnostics[1]\n",
+      "      Request starting HTTP/1.1 GET http://localhost:5000/big - - -\n",
+      "info: Microsoft.AspNetCore.Routing.EndpointMiddleware[0]\n",
+      "      Executing endpoint 'HTTP: GET /big => <<Initialize>>b__0_0'\n",
+      "info: Microsoft.AspNetCore.Routing.EndpointMiddleware[1]\n",
+      "      Executed endpoint 'HTTP: GET /big => <<Initialize>>b__0_0'\n",
+      "info: Microsoft.AspNetCore.Hosting.Diagnostics[2]\n",
+      "      Request finished HTTP/1.1 GET http://localhost:5000/big - 200 - text/plain;+charset=utf-8 246.4761ms\n",
+      "info: Microsoft.AspNetCore.Hosting.Diagnostics[1]\n",
+      "      Request starting HTTP/1.1 GET http://localhost:5000/favicon.ico - - -\n",
+      "info: Microsoft.AspNetCore.Hosting.Diagnostics[2]\n",
+      "      Request finished HTTP/1.1 GET http://localhost:5000/favicon.ico - 404 0 - 6.0240ms\n",
+      "info: Microsoft.AspNetCore.Hosting.Diagnostics[16]\n",
+      "      Request reached the end of the middleware pipeline without being handled by application code. Request path: GET http://localhost:5000/favicon.ico, Response status code: 404\n"
      ]
     },
     {
