--- a/1.4 Default lambda parameters.ipynb
+++ b/1.4 Default lambda parameters.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A motivation for this is the improvement onto the new minimal api's"
+    "A motivation for this is to improve the new minimal api's"
    ]
   },
   {
