add sample to Keyed DI

--- a/2.3 Keyed DI Services.ipynb
+++ b/2.3 Keyed DI Services.ipynb
@@ -144,6 +144,64 @@
     "    public object Get(string key) => $\"Resolving {key} from small cache.\";\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Real world example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(18,79): error CS8635: Unexpected character sequence '...'\r\n(18,81): error CS1003: Syntax error, ',' expected\r\n(19,80): error CS8635: Unexpected character sequence '...'\r\n(19,82): error CS1003: Syntax error, ',' expected",
+     "output_type": "error",
+     "traceback": [
+      "(18,79): error CS8635: Unexpected character sequence '...'\r\n",
+      "(18,81): error CS1003: Syntax error, ',' expected\r\n",
+      "(19,80): error CS8635: Unexpected character sequence '...'\r\n",
+      "(19,82): error CS1003: Syntax error, ',' expected"
+     ]
+    }
+   ],
+   "source": [
+    "public class User {}\n",
+    "\n",
+    "public interface IUserService {\n",
+    "    Task<User> GetUser(string userId);\n",
+    "    Task<IEnumerable<User>> GetUsers();\n",
+    "}\n",
+    "\n",
+    "public interface IUserServiceAsUser : IUserService { }\n",
+    "public interface IUserServiceAsApp : IUserService { }\n",
+    "\n",
+    "public class AADUserService : IUserService, IUserServiceAsUser, IUserServiceAsApp { }\n",
+    "\n",
+    "services.AddScoped<IUserServiceAsApp>();\n",
+    "services.AddScoped<IUserServiceAsUser>();\n",
+    "\n",
+    "// with keyed DI\n",
+    "builder.Services.AddKeyedScoped<IUserService>(\"app\", sp => new AADUserService(...));\n",
+    "builder.Services.AddKeyedScoped<IUserService>(\"user\", sp => new AADUserService(...));\n",
+    "\n",
+    "public void GetUsers([FromKeyedServices(\"app\")] IUserService userService) { } \n",
+    "public void GetUsers([FromKeyedServices(\"user\")] IUserService userService) { } "
+   ]
   }
  ],
  "metadata": {
