more info to keyed di

--- a/2.3 Keyed DI Services.ipynb
+++ b/2.3 Keyed DI Services.ipynb
@@ -192,12 +192,12 @@
     "\n",
     "public class AADUserService : IUserService, IUserServiceAsUser, IUserServiceAsApp { }\n",
     "\n",
-    "services.AddScoped<IUserServiceAsApp>();\n",
-    "services.AddScoped<IUserServiceAsUser>();\n",
+    "services.AddScoped<IUserServiceAsApp>(sp => new AADUserService(/* app specific login service*/));\n",
+    "services.AddScoped<IUserServiceAsUser>(sp => new AADUserService(/* user specific login service*/));\n",
     "\n",
     "// with keyed DI\n",
-    "builder.Services.AddKeyedScoped<IUserService>(\"app\", sp => new AADUserService(...));\n",
-    "builder.Services.AddKeyedScoped<IUserService>(\"user\", sp => new AADUserService(...));\n",
+    "builder.Services.AddKeyedScoped<IUserService>(\"app\", sp => new AADUserService(/* app specific login service*/)));\n",
+    "builder.Services.AddKeyedScoped<IUserService>(\"user\", sp => new AADUserService(/* user specific login service*/));\n",
     "\n",
     "public void GetUsers([FromKeyedServices(\"app\")] IUserService userService) { } \n",
     "public void GetUsers([FromKeyedServices(\"user\")] IUserService userService) { } "
